# client

./: .gitignore  AUTHORS  CMakeLists.txt  Invertika.url  Makefile.am  Makefile.in  Mana.url  README  The Mana World.url  branding.xml  configure.ac  index.html  index.js  index.php  invertika.desktop  invertika.menu  main.js  mana.cbp  options.js  player.js  preloads.js  style.css
classes/: accountserverconnection.js  binary.js  gameserverconnection.js  globals.js  messagein.js  messageout.js
data/: CMakeLists.txt  Makefile.am  Makefile.in  branding.xml
data/icons/: CMakeLists.txt  Makefile.am  Makefile.in  ivk.xpm
invertika/: MessageOut.js  Program.cs  index.html  index.js  index.php  invertika.csproj  main.js  protocol.js  style.css
libs/: melonJS-min.js  melonJS.js  mootools-core.js
mana.xcodeproj/: garfield.mode1  garfield.mode1v3  project.pbxproj
nbproject/: project.xml
po/: CMakeLists.txt  LINGUAS  Makevars  POTFILES.in  ar.po  bg.po  ca.po  cs.po  da.po  de.po  en_GB.po  eo.po  es.po  et.po  fa.po  fi.po  fr.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  mana.pot  nb.po  nds.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sq.po  sv.po  te.po  th.po  tr.po  uk.po  zh_CN.po  (+2 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in  SDLMain.m  animatedsprite.cpp  animatedsprite.h  animationparticle.cpp  animationparticle.h  avatar.cpp  avatar.h  being.cpp  being.h  beingmanager.cpp  beingmanager.h  binary.js  channel.cpp  channel.h  channelmanager.cpp  channelmanager.h  client.cpp  client.h  commandhandler.cpp  commandhandler.h  configlistener.h  debug.js  (+92 more)
(+513 files in other folders)
